--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,18 @@
     tools:context=".MainActivity"
     android:gravity="bottom"
     android:orientation="vertical">
-<!--    <androidx.fragment.app.FragmentContainerView-->
-<!--        android:id="@+id/nav_host_fragment"-->
-<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:defaultNavHost="true"-->
-<!--        app:navGraph="@navigation/nav_graph"-->
-<!--        />-->
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="90dp"
+        android:padding="1dp"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph"
+        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
@@ -59,6 +63,7 @@
            />
 
    </LinearLayout>
+
 
 
 </LinearLayout>
