--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,12 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:name="dashboard.DashboardFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="90dp"
         android:padding="1dp"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph"
         />
    <LinearLayout
        android:layout_width="match_parent"
@@ -29,6 +27,7 @@
        >
        <ImageButton
            android:layout_width="wrap_content"
+           android:id="@+id/dash_button"
            android:layout_height="100dp"
            android:text="@string/dashboard"
            android:layout_weight="25"
