--- a/app/src/main/res/layout/cardview_for_app_details.xml
+++ b/app/src/main/res/layout/cardview_for_app_details.xml
@@ -30,7 +30,7 @@
             android:id="@+id/progress_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
+            android:indeterminate="false"
             android:minHeight="20dp" />
 
         <TextView
