--- a/app/src/main/res/layout/cardview_for_app_details.xml
+++ b/app/src/main/res/layout/cardview_for_app_details.xml
@@ -7,17 +7,22 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 >
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:id="@+id/apps_logo"
         android:src="@drawable/ic_baseline_settings_24"
         android:contentDescription="show app's logo"
+        android:padding="1dp"
+        android:layout_marginRight="3dp"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="false"
+            android:padding="1dp"
             android:minHeight="20dp" />
 
         <TextView
@@ -38,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Hello suckers"
-            android:textSize="30sp" />
+            android:paddingBottom="3dp"
+            android:textSize="25sp" />
 
 
     </LinearLayout>
