--- a/app/src/main/res/layout/cardview_for_app_details.xml
+++ b/app/src/main/res/layout/cardview_for_app_details.xml
@@ -15,7 +15,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 >
-    <ImageView
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="1dp"
+        android:layout_marginLeft="2dp"
+        android:orientation="vertical">
+
+        <ImageView
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:id="@+id/apps_logo"
@@ -23,7 +30,21 @@
         android:contentDescription="show app's logo"
         android:padding="1dp"
         android:layout_marginRight="3dp"
+        android:layout_gravity="center"
         />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:text="@string/setting"
+            android:id="@+id/app_label"
+            />
+
+
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
